Always check the .pro file\!

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ timefuse-client
 *.autosave
 *.o
 timefuse-client.app # for mac people (i.e. Gunjan)
+ui_create_account_window.h
 moc_*
 *~
 timefuse-client.app/*
